@@ -133,5 +133,6 @@ If you get stuck, you can ask for help in the Plugin Forum.
 * Fix - Missing mapping for formal German (de_DE_formal), Swiss German (de_CH), and informal Swiss German (de_CH_informal) locales for Stripe emails.
 * Fix - Set failed order as pre order
 * Tweak - Skip Apple Pay registration for accounts from India.
+* Tweak - Refactor post_meta calls for HPOS compatibility.
 
 [See changelog for all versions](https://raw.githubusercontent.com/woocommerce/woocommerce-gateway-stripe/trunk/changelog.txt).
