@@ -5,6 +5,7 @@
 * Fix - Missing mapping for formal German (de_DE_formal), Swiss German (de_CH), and informal Swiss German (de_CH_informal) locales for Stripe emails.
 * Fix - Set failed order as pre order
 * Tweak - Skip Apple Pay registration for accounts from India.
+* Tweak - Refactor post_meta calls for HPOS compatibility.
 
 = 7.5.0 - 2023-08-10 =
 * Fix - Unable to process 0 amount subscription.
